Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_online-voting-system.yml
+++ b/.github/workflows/main_online-voting-system.yml
@@ -46,9 +46,7 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
-
+    
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
@@ -58,13 +56,6 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip
       
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_483C3902206E4D3BBD83037659677FB7 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_147546EE1E884D5A8146D5929982EA14 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_2C5F2F17AFC6453899615BA30FD4889C }}
-
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
@@ -72,4 +63,4 @@ jobs:
           app-name: 'online-voting-system'
           slot-name: 'Production'
           package: .
-          
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_C3DCB4DB0D874D2A93B22354C2CA009A }}
